# air_quality_app

server/: Cargo.toml  main.py
server/src/: main.rs  not_found.rs
