[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "4"
dotenv = "0.15.0"
derive_more = "0.99.17"
env_logger = "0.11.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
